Gallery overlap fix3

--- a/styles.css
+++ b/styles.css
@@ -216,17 +216,13 @@ img {
 
 .gallery {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 12px;
 }
 
 @media(min-width:720px) {
   .gallery {
-    grid-template-columns: repeat(2, 1fr)
-  }
-
-  .gallery {
-    height: 180px;
+    grid-template-columns: repeat(4, 1fr)
   }
 }
 
